static pages + home page

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,37 +1,20 @@
 {% extends 'base.html' %}
 
 {% block content %}
-            <!-- Carousel
-    ================================================== -->
+    
+    <!-- Carousel -->
     <div id="myCarousel" class="carousel slide">
       <div class="carousel-inner">
-        <div class="item active">
-          <img src="/static/images/slide-01.jpg" alt="">
-          <div class="container">
-            <div class="carousel-caption">
-              <h4>Комплексные инвестиционные планы модернизации моногородов</h4>
-              <p class="lead"><a href='#' class='btn btn-info'>Подробнее...</a></p>
+        {% for s in slideshow %}
+            <div class="item {% if forloop.first %} active {% endif %}">
+                <img src="/media/{{ s.image }}" alt="">
+                <div class="container">
+                    <div class="carousel-caption">
+                        <h4>{{ s.text }}</h4>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-        <div class="item">
-          <img src="/static/images/slide-02.jpg" alt="">
-          <div class="container">
-            <div class="carousel-caption">
-              <h4>Финансовая модель города Пензы</h4>
-              <p class="lead"><a href='#' class='btn btn-info'>Подробнее...</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <img src="/static/images/slide-03.jpg" alt="">
-          <div class="container">
-            <div class="carousel-caption">
-              <h4>Разработка КИП г. Михайловки Волгоградской обл.</h4>
-              <p class="lead"><a href='#' class='btn btn-info'>Подробнее...</a></p>
-            </div>
-          </div>
-        </div>
+        {% endfor %}
       </div>
       <a class="left carousel-control" href="#myCarousel" data-slide="prev">&lsaquo;</a>
       <a class="right carousel-control" href="#myCarousel" data-slide="next">&rsaquo;</a>
@@ -48,27 +31,25 @@
                         
             <div class="well">
                 
-                <h4>Новости</h4> <hr />
-                <div class='news-item'>
-                    <a href='#'>29.01.2013</a>
-                    <img src='/static/images/news.bmp' />
-                    <p>НП «ЕАЦ» принял участие… организовал… обеспечил, разработал, представил..</p>
-                </div>
-                <hr />
+                <h4>Новости</h4> 
+                {% for n in news %}
+                    <hr />
+                    <div class='news-item'>
+                        <a href='/news/{{ n.slug }}'>{{ n.date }}</a>
+                        <a href='/news/{{ n.slug }}'><img src='/media/{{ n.image }}' /></a>
+                        <p>{{ n.name }}</p>
+                    </div>
+                {% endfor %}
                
                 
             </div><!--/.well -->
-            <a href='#' class='btn btn-info' style=''>Презентация о компании</a>
+            
         </div><!--/span-->
         
         
         <div class="span8">
-            <h3>Мы рады приветствовать вас на сайте НП «Евро-Азиатский центр правового и экономического сотрудничества»!   </h3>
-            <p>
-            Центр оказывает юридическую помощь российским и зарубежным компаниям, предоставляет широкий спектр услуг в области экономических исследований, финансового консалтинга, бизнеса, а также осуществляет правовое сопровождение региональных и корпоративных программ экономического, производственного и социального развития.  Центр располагает собственной экспертной базой, достаточным организационным, материально-техническим и интеллектуальным потенциалом для решения самых сложных юридических и экономических проблем. </p>
-            <p>
-Центр поддерживает деловые контакты с зарубежными юридическими компаниями 6 стран, в т.ч. США, Великобритании, Италии, Ирландии, Испании, имеет свои представительства в Китае, Болгарии, Германии, на Украине, в Киргизии, Узбекистане, а также Генеральных представителей в 12 субъектах Российской Федерации. В составе Центра действуют Восточно-Сибирское отделение. Российский инновационно-правовой центр, Российское агентство правовой информации, Третейский суд по разрешению экономических споров.
-            </p>
+            {{ content|safe }}
+            <a href='#' class='btn btn-info' style=''>Презентация о компании</a>
         </div><!--/span-->
     </div><!--/row-->
 
@@ -76,7 +57,7 @@
       !function ($) {
         $(function(){
           // carousel demo
-          $('#myCarousel').carousel()
+          $('#myCarousel').carousel();
         })
       }(window.jQuery)
     </script>
