--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
              <div class="navbar">
         <div class="navbar-inner">
             <ul class="nav">
-                <li class='active'><a href="#">Главная</a></li>
+                <li {% if request_url == 'home' %} class='active' {% endif %}><a href="#">Главная</a></li>
                 <li class="dropdown">
                     <a class="dropdown-toggle"
                     data-toggle="dropdown"
@@ -39,10 +39,10 @@
                         <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">История</a></li>
-                        <li><a href="#">Руководство</a></li>
-                        <li><a href="#">Эксперты</a></li>
-                        <li><a href="#">Партнеры</a></li>
+                        <li><a href="/page/history">История</a></li>
+                        <li><a href="/page/leaders">Руководство</a></li>
+                        <li><a href="/experts">Эксперты</a></li>
+                        <li><a href="/partners">Партнеры</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
@@ -53,24 +53,13 @@
                         <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Правовое сотрудничество</a></li>
-                        <li><a href="#">Экономическое сотрудничество</a></li>
+                        <li><a href="/page/services_law">Правовое сотрудничество</a></li>
+                        <li><a href="/page/services_economics">Экономическое сотрудничество</a></li>
                     </ul>
                 </li>
-                <li class="dropdown">
-                    <a class="dropdown-toggle"
-                    data-toggle="dropdown"
-                    href="#">
-                        Проекты
-                        <b class="caret"></b>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Правовое сотрудничество</a></li>
-                        <li><a href="#">Экономическое сотрудничество</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">Новости</a></li>
-                <li><a href="#">Контакты</a></li>
+                <li><a href="/projects">Проекты</a></li>
+                <li><a href="/news">Новости</a></li>
+                <li><a href="/page/contacts">Контакты</a></li>
             </ul>
         </div>
     </div>
