--- a/templates/home.html
+++ b/templates/home.html
@@ -25,8 +25,11 @@
       <div class="row">
         <div class="span4">
             <div class="input-append">
-                <input style='width: 240px' id="appendedInputButton" type="text">
-                <button class="btn" type="button">&nbsp;<i class="icon-search"></i>&nbsp;</button>
+                <form action='/news' method='post'>
+                    {% csrf_token %}
+                    <input style='width: 240px' id="appendedInputButton" type="text" name='search_value' />
+                    <button class="btn" type="submit">&nbsp;<i class="icon-search"></i>&nbsp;</button>
+                </form>
             </div>  
                         
             <div class="well">
