--- a/templates/home.html
+++ b/templates/home.html
@@ -51,8 +51,10 @@
         
         
         <div class="span8">
+            <div class='well' style='background-color: white'>
             {{ content|safe }}
-            <a href='#' class='btn btn-info' style=''>Презентация о компании</a>
+            <a href='#' class='btn btn-primary' style=''>Презентация о компании</a>
+            </div>
         </div><!--/span-->
     </div><!--/row-->
 
