--- a/templates/project_details.html
+++ b/templates/project_details.html
@@ -4,12 +4,13 @@
 
       <div class="row">
         <div class="span12">
-            
+            <div class='well' style='background-color: white'>
             <img src='/media/{{ project.image }}' style='max-height: 300px; float: left; padding-right: 10px' />
             <h4>{{ project.name }}</h4> 
             <span><b>{{ project.date.year }}</b> г.</span><br />
             {{ project.text|safe }}<br />
-            <a href='/projects' class='btn btn-small btn-info'>Назад</a>
+            <a href='/projects' class='btn btn-small btn-primary'>Назад</a>
+            </div>
         </div>
     </div><!--/row-->
 
