--- a/templates/experts.html
+++ b/templates/experts.html
@@ -5,15 +5,15 @@
       <div class="row">
         <div class="span12">
             <h2>Эксперты</h2> 
+        </div>
             {% for e in experts %}
-                <hr />
-                <div>
+            <div class="span12">
+                <div class='well' style='background-color: white'>
                     <h5>{{ e.name }}</h5>
                     <p>{{ e.content }}</p>
                 </div>
-                <div class='clear'></div>
+                </div>
             {% endfor %}
-        </div>
     </div><!--/row-->
 
 {% endblock %}
