--- a/templates/page.html
+++ b/templates/page.html
@@ -4,5 +4,7 @@
 
 {% block content %}
     <h2>{{ title }}</h2>
-    {{ content|safe }}
+    <div class='well' style='background-color: white'>
+        {{ content|safe }}
+    </div>
 {% endblock %}
