--- a/templates/partners.html
+++ b/templates/partners.html
@@ -3,13 +3,17 @@
 {% block content %}
 
       <div class="row">
+      <div class="span12">
+      <h2>Партнеры</h2> </div>
         <div class="span12">
-            <h2>Партнеры</h2> 
+        <div class='well' style='background-color: white'>
+            
             <ul>
             {% for p in partners %}
                 <li>{{ p.name }}</li>
             {% endfor %}
             </ul>
+        </div>
         </div>
     </div><!--/row-->
 
