--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
       <div class="carousel-inner">
         {% for s in slideshow %}
             <div class="item {% if forloop.first %} active {% endif %}">
-                <img src="/media/{{ s.image }}" alt="">
+                <img src="/media/{{ s.image }}" style='width: 940px; height: 350px' alt="">
                 <div class="container">
                     <div class="carousel-caption">
                         <h4>{{ s.text }}</h4>
