one more beauty

--- a/templates/experts.html
+++ b/templates/experts.html
@@ -9,7 +9,7 @@
             {% for e in experts %}
             <div class="span12">
                 <div class='well' style='background-color: white'>
-                    <h5>{{ e.name }}</h5>
+                    <h4><i>{{ e.name }}</i></h4>
                     <p>{{ e.content }}</p>
                 </div>
                 </div>
