--- a/templates/home.html
+++ b/templates/home.html
@@ -34,7 +34,7 @@
                         
             <div class="well">
                 
-                <h4>Новости</h4> 
+                <h4><i>Новости</i></h4> 
                 {% for n in news %}
                     <hr />
                     <div class='news-item'>
