--- a/templates/leaders.html
+++ b/templates/leaders.html
@@ -6,13 +6,13 @@
             <div class="span12"><h2>Руководство</h2> </div>
                 <div class="span6">
                     <div class='well' style='background-color: white'>
-                        <h5>{{ f.title }}</h5>
+                        <h4><i>{{ f.title }}</i></h4>
                         {{ f.content|safe }}
                     </div>
                 </div>
                 <div class="span6">
                     <div class='well' style='background-color: white'>
-                        <h5>{{ s.title }}</h5>
+                        <h4><i>{{ s.title }}</i></h4>
                         {{ s.content|safe }}
                     </div>
                 </div>
