--- a/templates/news.html
+++ b/templates/news.html
@@ -19,7 +19,7 @@
                     {% if search_value %} 
                         <p>Вы искали: <b>{{ search_value }}</b></p>
                     {% else %}
-                        <h4>Новости</h4> 
+                        <h4><i>Новости</i></h4> 
                     {% endif %}
                     {% for n in news %}
                         <hr />
