--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <title>{% block title %}ЕАЦ{% endblock %}</title>
-        
+        <meta name='yandex-verification' content='6bcbe54f264f1c8d' />
         <link href="/static/bootstrap/css/bootstrap.css" type="text/css" rel="stylesheet">
         <link href="/static/style.css" type="text/css" rel="stylesheet">
         <script src="/static/bootstrap/js/jquery.js"></script> 
@@ -19,15 +19,16 @@
                     <br />
                     
                     <div class='header' style='padding-top: 10px'>
-                        <a href='/'><img src='/static/images/logo.png' style='height: 90px; float: left' /></a>
+                        <a href='/'><img src='/static/images/logo.png' style='height: 80px; padding-right: 10px; float: left' /></a>
+                        <div style='height: 5px'></div>
                         <h2><i>Евро - Азиатский Центр</i></h2>
                         <h5><i>экономического и правового сотрудничества</i></h5>
                     </div>
                 </div>
                 <div class="span5">
                     <br />
-                    <div class='well' style='background-color: white'>
-                    <p  style='text-align: right'>125212, г.Москва, Головинское шоссе д.8., к 2а<br />
+                    <div class='well' style='background-color: white; height: 55px'>
+                    <p  style='text-align: right;'>125212, г.Москва, Головинское шоссе д.8., к 2а<br />
 Тел.    +7 495 452 58 48; +7 495 452 58 85<br />
 Факс   +7 495 452 02 64</p></div>
                 </div>
