--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
                 <img src="/media/{{ s.image }}" style='width: 940px; height: 400px' alt="">
                 <div class="container">
                     <div class="carousel-caption">
-                        <h4>{{ s.text }}</h4>
+                        <h4>{{ s.text|safe}}</h4>
                     </div>
                 </div>
             </div>
