--- a/templates/base.html
+++ b/templates/base.html
@@ -77,6 +77,7 @@
             <hr />
             <footer>
                 <p>&copy; Евро - Азиатский центр, 2013</p>
+                <p><a href='http://webgenesis.ru' target='blank'>Создание и поддержка сайта</a></p>
             </footer>
         </div>
                     
