--- a/site_static/style.css
+++ b/site_static/style.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto:400italic,500italic,400&subset=latin,cyrillic-ext,cyrillic);
+<!--@import url(http://fonts.googleapis.com/css?family=Roboto:400italic,500italic,400&subset=latin,cyrillic-ext,cyrillic);-->
 
 p, h3 
 {
@@ -36,8 +36,9 @@ h3, h4
 
 h1, h2, h3, h4, h5, h6
 {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
+ <!--   font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: 400;-->
 }
 
 
