--- a/templates/base.html
+++ b/templates/base.html
@@ -62,6 +62,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="/page/services_law">Правовое сотрудничество</a></li>
                         <li><a href="/page/services_economics">Экономическое сотрудничество</a></li>
+			<li><a href="/page/tekuschaya-rabota">Текущая работа</a></li>
                     </ul>
                 </li>
                 <li {% if 'projects' in request_url %} class='active' {% endif %}><a href="/projects">Проекты</a></li>
