--- a/templates/news.html
+++ b/templates/news.html
@@ -29,7 +29,7 @@
                             <p>{{ n.name }}</p>
                         </div>
                     {% endfor %}
-                    <a href='#' class='btn btn-small btn-primary' style=''>Архив новостей</a>
+         <!--           <a href='#' class='btn btn-small btn-primary' style=''>Архив новостей</a> -->
                 {% endif %}
                 
             </div><!--/.well -->
